--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fireworks-js/react": "^2.10.7",
         "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@monaco-editor/react": "^4.6.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
         "json2xls": "^0.1.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.4.2",
+        "node-fetch": "^3.3.2",
         "nodemailer": "^6.9.7",
         "react": "^18.2.0",
         "react-bootstrap": "^2.8.0",
@@ -24,8 +26,10 @@
         "react-icons": "^4.11.0",
         "react-particles": "^2.12.2",
         "react-scripts": "5.0.1",
+        "react-select": "^5.8.0",
         "react-slick": "^0.29.0",
         "react-social-icons": "^6.4.0",
+        "react-spinners": "^0.13.8",
         "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4"
     },
