--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/styled": "^11.11.0",
         "@fireworks-js/react": "^2.10.7",
         "@fortawesome/fontawesome-svg-core": "^6.4.2",
         "@monaco-editor/react": "^4.6.0",
+        "@mui/material-next": "^6.0.0-alpha.114",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.3.0",
         "cors": "^2.8.5",
         "exceljs": "^4.3.0",
+        "html-to-image": "^1.11.11",
         "json2csv": "^6.0.0-alpha.2",
         "json2xls": "^0.1.2",
         "jsonwebtoken": "^9.0.2",
@@ -21,6 +24,7 @@
         "react": "^18.2.0",
         "react-bootstrap": "^2.8.0",
         "react-bootstrap-icons": "^1.10.3",
+        "react-circle-slider": "^1.6.2",
         "react-confetti": "^6.1.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
